force-app/main/default/objects/Contact/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>Account Record Type ID, for setting Lightning Component visibility based on if contact has Household or Org as Account type.</description>
    <formula>Account.RecordType.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>