force-app/main/default/objects/Contact/fields/Anniversary_of_Religious_Vows__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_of_Religious_Vows__c</fullName>
    <formula>IF(
 
YEAR(TODAY())*10000+MONTH(TODAY())*100+DAY(TODAY())  &lt;  YEAR(TODAY())*10000+MONTH(Religious_Final_Vows__c )*100+DAY(Religious_Final_Vows__c),
 
DATE(YEAR(TODAY()),MONTH(Religious_Final_Vows__c),DAY(Religious_Final_Vows__c)),
 
DATE(YEAR(TODAY()+365),MONTH(Religious_Final_Vows__c),DAY(Religious_Final_Vows__c))
 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversary of Religious Vows</label>
    <type>Date</type>
</CustomField>