force-app/main/default/objects/Contact/fields/Birth_City_Province__c.field-meta.xml
<CustomField>
    <fullName>Birth_City_Province__c</fullName>
    <inlineHelpText>City and Province/State where a contact was born.</inlineHelpText>
    <label>Birth City, Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>