force-app/main/default/objects/Contact/fields/Clergy_ID__c.field-meta.xml
<CustomField>
    <fullName>Clergy_ID__c</fullName>
    <label>Clergy ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>