force-app/main/default/objects/Contact/fields/Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Birth__c</fullName>
    <label>Country of Birth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>