force-app/main/default/objects/Contact/fields/Date_of_Baptism__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Baptism__c</fullName>
    <label>Date of Baptism</label>
    <type>Date</type>
</CustomField>