force-app/main/default/objects/Contact/fields/Date_of_Diaconate_Ordination__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Diaconate_Ordination__c</fullName>
    <label>Date of Diaconate Ordination</label>
    <type>Date</type>
</CustomField>