force-app/main/default/objects/Contact/fields/Date_of_Incardination__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incardination__c</fullName>
    <description>Date a Religious or Temporary Sojourn priest was recognized as a priest of the RCAV.</description>
    <inlineHelpText>Date a Religious or Temporary Sojourn priest was recognized as a priest of the RCAV.</inlineHelpText>
    <label>Date of Incardination</label>
    <type>Date</type>
</CustomField>