force-app/main/default/objects/Contact/fields/Diaconate_Ordination_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Diaconate_Ordination_Anniversary__c</fullName>
    <formula>IF(
 
YEAR(TODAY())*10000+MONTH(TODAY())*100+DAY(TODAY())  &lt;  YEAR(TODAY())*10000+MONTH( Date_of_Diaconate_Ordination__c  )*100+DAY(Date_of_Diaconate_Ordination__c),
 
DATE(YEAR(TODAY()),MONTH(Date_of_Diaconate_Ordination__c),DAY(Date_of_Diaconate_Ordination__c)),
 
DATE(YEAR(TODAY()+365),MONTH(Date_of_Diaconate_Ordination__c),DAY(Date_of_Diaconate_Ordination__c))
 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diaconate Ordination Anniversary</label>
    <type>Date</type>
</CustomField>