force-app/main/default/objects/Contact/fields/Home_Parish__c.field-meta.xml
<CustomField>
    <fullName>Home_Parish__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Parish</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parishioners</relationshipLabel>
    <relationshipName>Parishioners</relationshipName>
    <type>Lookup</type>
</CustomField>