force-app/main/default/objects/Contact/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Field for storing matching legacy IDs from prior data systems</description>
    <label>Legacy ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>