force-app/main/default/objects/Contact/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <inlineHelpText>This field is optional and should only be used when a separate legal name is specified on legal documents such as Passports. This would most commonly be used for religious contacts from outside Canada.</inlineHelpText>
    <label>Legal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>