force-app/main/default/objects/Contact/fields/Marriage_License__c.field-meta.xml
<CustomField>
    <fullName>Marriage_License__c</fullName>
    <label>Marriage License #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>