force-app/main/default/objects/Contact/fields/Marriage_Officiant_License__c.field-meta.xml
<CustomField>
    <fullName>Marriage_Officiant_License__c</fullName>
    <inlineHelpText>Government-granted license number for officiating weddings.</inlineHelpText>
    <label>Marriage Officiant License</label>
    <length>30</length>
    <type>Text</type>
</CustomField>