force-app/main/default/objects/Contact/fields/Ministerial_Status__c.field-meta.xml
<CustomField>
    <fullName>Ministerial_Status__c</fullName>
    <description>Canonical ministerial statuses for Priests, Deacons, and Religious.</description>
    <inlineHelpText>Canonical ministerial statuses for Priests, Deacons, and Religious.</inlineHelpText>
    <label>Ministerial Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active in Diocese</fullName>
            </value>
            <value>
                <fullName>ActOther</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>In Residence</fullName>
            </value>
            <value>
                <fullName>In Studies</fullName>
            </value>
            <value>
                <fullName>Involuntary Administrative Leave</fullName>
            </value>
            <value>
                <fullName>Laicized</fullName>
            </value>
            <value>
                <fullName>Leave of Absence</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Seconded</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Visiting</fullName>
            </value>
            <value>
                <fullName>Deacon in Residence</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Left Diocese</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>