force-app/main/default/objects/Contact/fields/Next_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Next_Birthday__c</fullName>
    <formula>IF(
 
YEAR(TODAY())*10000+MONTH(TODAY())*100+DAY(TODAY())  &lt;  YEAR(TODAY())*10000+MONTH(Birthdate )*100+DAY(Birthdate),
 
DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)),
 
DATE(YEAR(TODAY()+365),MONTH(Birthdate),DAY(Birthdate))
 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Birthday</label>
    <type>Date</type>
</CustomField>