force-app/main/default/objects/Contact/fields/Primary_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Assignment as marked on c_Assigments; used only for Priests, Deacons, Religious.</description>
    <label>Primary Assignment</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Primary Assignment)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>