force-app/main/default/objects/Contact/fields/Religious_Final_Vows__c.field-meta.xml
<CustomField>
    <fullName>Religious_Final_Vows__c</fullName>
    <description>Date of religious&apos; final vows.</description>
    <label>Final Vows</label>
    <type>Date</type>
</CustomField>