force-app/main/default/objects/Contact/fields/Religious_First_Vows__c.field-meta.xml
<CustomField>
    <fullName>Religious_First_Vows__c</fullName>
    <description>Date of a religious&apos; first vows.</description>
    <label>First Vows</label>
    <type>Date</type>
</CustomField>