force-app/main/default/objects/Contact/fields/Religious_Order__c.field-meta.xml
<CustomField>
    <fullName>Religious_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Provincial or International Congregation, not the local congregation.</inlineHelpText>
    <label>Religious Order</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account lookup value does not exist or does not match filter criteria. (Must be a Religious Order Account record.)</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Religious</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Religious Member</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>