force-app/main/default/objects/Contact/fields/Religious_Suffix_2__c.field-meta.xml
<CustomField>
    <fullName>Religious_Suffix_2__c</fullName>
    <label>Religious Suffix (2)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>