force-app/main/default/objects/Contact/fields/Religious_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Religious_Suffix__c</fullName>
    <label>Religious Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Religious_Suffix</valueSetName>
    </valueSet>
</CustomField>