force-app/main/default/objects/Contact/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Stage of formation for the Permanent Diaconate or Priesthood</description>
    <inlineHelpText>A person&apos;s stage of formation for the Permanent Diaconate or Priesthood</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inquirer</fullName>
            </value>
            <value>
                <fullName>Aspirant</fullName>
            </value>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Lector</fullName>
            </value>
            <value>
                <fullName>Acolyte</fullName>
            </value>
            <value>
                <fullName>Deacon</fullName>
            </value>
            <value>
                <fullName>On Leave</fullName>
            </value>
            <value>
                <fullName>On Sabbatical</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Postulant</fullName>
            </value>
            <value>
                <fullName>Novice</fullName>
            </value>
            <value>
                <fullName>Temporary Professed</fullName>
            </value>
            <value>
                <fullName>Solemn Professed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>