force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>2020/09/20 MDM - Tracking the provenance and status of priests &amp; religious. Aligns with how Rome requests reporting of clergy.</description>
    <inlineHelpText>Temp Sojourn = Canadian from other diocese; Temp Sojourn Foreign = Diocesan priest from diocese outside of Canada; Religiou = religious from a North American province. Religious (Foreign) = religious from province located outside North America.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diocesan</fullName>
            </value>
            <value>
                <fullName>Religious</fullName>
            </value>
            <value>
                <fullName>Temporary Sojourn (Canadian)</fullName>
            </value>
            <value>
                <fullName>Temporary Sojourn (Foreign)</fullName>
            </value>
            <value>
                <fullName>Religious (Foreign)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>