force-app/main/default/objects/Contact/fields/Will_on_file__c.field-meta.xml
<CustomField>
    <fullName>Will_on_file__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the Chancery office have this contact&apos;s will on file.</inlineHelpText>
    <label>Will on file</label>
    <type>Checkbox</type>
</CustomField>