force-app/main/default/objects/Contact/recordTypes/Consecrated.recordType-meta.xml
<RecordType>
    <fullName>Consecrated</fullName>
    <active>true</active>
    <label>Consecrated</label>
</RecordType>