force-app/main/default/objects/Contact/recordTypes/Deacon.recordType-meta.xml
<RecordType>
    <fullName>Deacon</fullName>
    <active>true</active>
    <label>Deacon</label>
</RecordType>