force-app/main/default/objects/Contact/recordTypes/Lay_Person.recordType-meta.xml
<RecordType>
    <fullName>Lay_Person</fullName>
    <active>true</active>
    <label>Lay Person</label>
</RecordType>