force-app/main/default/objects/Contact/recordTypes/Priest.recordType-meta.xml
<RecordType>
    <fullName>Priest</fullName>
    <active>true</active>
    <label>Priest</label>
</RecordType>