force-app/main/default/objects/Contact/recordTypes/Religious.recordType-meta.xml
<RecordType>
    <fullName>Religious</fullName>
    <active>true</active>
    <label>Religious</label>
</RecordType>