force-app/main/default/objects/Contact/listViews/All_Religious.listView-meta.xml
<ListView>
    <fullName>All_Religious</fullName>
    <columns>CONTACT.SALUTATION</columns>
    <columns>FULL_NAME</columns>
    <columns>Primary_Assignment__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Consecrated,Contact.Religious</value>
    </filters>
    <label>All Religious</label>
</ListView>